--- a/cim-client/src/main/resources/application.properties
+++ b/cim-client/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=cim-client
 
 # web port
-server.port=8082
+#server.port=8082
+server.port=8084
 
 # 是否打开swagger
 swagger.enable = true
@@ -20,8 +21,10 @@ cim.msg.logger.path = /opt/logs/cim/
 cim.route.url = http://localhost:8083/
 
 # 客户端唯一ID
-cim.user.id=1586617710861
-cim.user.userName=zhangsan
+#cim.user.id=1656317594743
+#cim.user.userName=zhangsan
+cim.user.id=1656407721188
+cim.user.userName=lisi
 
 # 回调线程队列大小
 cim.callback.thread.queue.size = 2
