--- a/cim-server/src/main/resources/application.properties
+++ b/cim-server/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=cim-server
 
+#使用log4j2
+logging.config=classpath:log4j2.yml
+
 # web port
 server.port=8081
 
@@ -25,7 +28,7 @@ monitor.channel.map.key=channelMap
 app.zk.switch=true
 
 # zk 地址
-app.zk.addr=ip:port
+app.zk.addr=0.0.0.0:2181
 
 # zk 连接超时时限
 app.zk.connect.timeout=15000
